tests/sumo/meso/junction_control/tls_coordination/good/control/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (13ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_7_0+1166-554a675755 started with time: 0.00
Simulation ended at time: 168.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 0.02s
 Real time factor: 8000
 UPS: 61476.190476
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 9.74
 Duration: 43.03
 WaitingTime: 3.64
 TimeLoss: 20.97
 DepartDelay: 9.17

