tests/sumo/meso/junction_control/tls_coordination/bad/control_tlsPenalty/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (8ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading route-files incrementally from 'input_routes.rou.xml'
Loading done.
Simulation version v1_21_0+1557-fb9ec070d59 started with time: 0.00.
Simulation ended at time: 160.00.
Reason: All vehicles have left the simulation.
Performance:
 Duration: 0.01s
 Real time factor: 32000
 UPS: 371800.000000
Vehicles:
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg of 30):
 RouteLength: 300.00
 Speed: 4.86
 Duration: 61.97
 WaitingTime: 0.00
 TimeLoss: 39.89
 DepartDelay: 12.43
